# Honeycomb-Optimized-Computing

./: .gitignore  .pre-commit-config.yaml  ANALISIS_CODIGO.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUACION_INNOVACION.md  README.md  ROADMAP.md  SECURITY.md  __init__.py  bridge.py  core.py  memory.py  metrics.py  nectar.py  pyproject.toml  requirements-dev.txt  requirements.txt  resilience.py  sandbox.py  security.py  swarm.py
.github/workflows/: bench.yml  lint.yml  release.yml  security.yml  stress.yml  test.yml
benchmarks/: bench_heavy_mixed.py  bench_swarm_1000_tasks.py  bench_swarm_render.py
benchmarks/comparative/: __init__.py  _workloads.py  bench_hoc.py  bench_hoc_vs_dask.py  bench_hoc_vs_mp.py  bench_hoc_vs_ray.py
bridge/: __init__.py  adapters.py  converters.py  mappers.py
choreo/: __init__.py  __main__.py  cli.py  derive.py  diff.py  spec.py  types.py  walker.py
core/: __init__.py  _metrics_internal.py  _queen.py  cells.py  cells_base.py  cells_specialized.py  constants.py  events.py  grid.py  grid_config.py  grid_geometry.py  health.py  locking.py  observability.py  pheromone.py
docs/: benchmarks-comparison.md  phase8-jepsen-prep.md  state-machines.md
docs/adr/: ADR-000-template.md  ADR-001-hexagonal-topology.md  ADR-002-mscs-over-pickle.md  ADR-003-hmac-shared-key.md  ADR-004-ordereddict-lru-pheromones.md  ADR-005-raft-like-quorum.md  ADR-006-mypy-legacy-suppression.md  ADR-007-tramoya-fsm-integration.md  ADR-008-choreo-static-fsm-verification.md  ADR-009-reified-transitions-and-auto-derive.md  ADR-010-dead-enum-cleanup.md  ADR-011-observability-stack.md  ADR-012-choreo-strict-mode.md  ADR-013-storage-backend-abstraction.md  ADR-014-checkpoint-format.md  ADR-015-class-level-cell-fsm.md  ADR-016-async-tick-loop.md  ADR-017-sandboxing-model.md  ADR-018-behavior-index.md  ADR-019-cython-numba-deferral.md  README.md
docs/perf/: baseline_v2.md  profiling.md
enjambre_de_guerra/: README.md  __init__.py  _harness.py  test_backpressure_extreme.py  test_concurrent_grids.py  test_concurrent_mutations.py  test_endurance_nightly.py  test_invariants.py  test_long_running.py  test_persistence_crash.py  test_persistence_endurance.py  test_pheromone_dos.py  test_resilience_chaos.py  test_sandbox_burst.py  test_state_machine_fuzz.py  test_throughput_burst.py
metrics/: __init__.py  collection.py  rendering.py  visualization.py
scripts/: compare_bench.py  generate_state_machines_md.py  profile_grid.py
snapshot/: PHASE_01_CLOSURE.md  PHASE_02_CLOSURE.md  PHASE_03_CLOSURE.md  PHASE_04_1_CLOSURE.md  PHASE_04_2_CLOSURE.md  PHASE_04_3_CLOSURE.md  PHASE_04_CLOSURE.md  PHASE_05_CLOSURE.md  PHASE_06_CLOSURE.md  PHASE_07_CLOSURE.md  SNAPSHOT.md  bandit_phase01.json  bandit_phase02.json  bandit_phase03.json  bandit_phase04.json  bandit_phase04_1.json  bandit_phase04_2.json  bandit_phase04_3.json  bandit_phase05.json  bandit_phase06.json  bandit_phase07.json  bench_baseline.json  bench_baseline.txt  bench_baseline_ci.json  bench_phase04_1.txt  bench_phase04_2.txt  bench_phase04_3.txt  bench_phase05.json  bench_phase05.txt  bench_phase06.json  bench_phase06.txt  bench_phase07.json  coverage_phase05.json  coverage_phase06.json  coverage_phase07.json  pip_audit_phase01.txt  pip_audit_phase07.txt  radon_cc_phase03.txt  radon_cc_phase04.txt  radon_cc_phase04_1.txt  (+13 more)
state_machines/: __init__.py  base.py  cell_fsm.py  failover_fsm.py  pheromone_fsm.py  reified.py  succession_fsm.py  task_fsm.py
storage/: __init__.py  base.py  checkpoint.py  sqlite.py
tests/: conftest.py  test_async_tick.py  test_backpressure.py  test_behavior_index.py  test_bridge.py  test_bridge_split.py  test_cell_seal.py  test_checkpointing.py  test_checkpointing_v2.py  test_choreo.py  test_core.py  test_crash_recovery.py  test_events_health.py  test_failover_phase.py  test_heavy.py  test_logging.py  test_memory.py  test_mermaid_export.py  test_metrics.py  test_nectar.py  test_phase07_coverage.py  test_pheromone_state.py  test_property.py  test_refactor_compat.py  test_resilience.py  test_sandbox.py  test_security.py  test_state_machines.py  test_state_machines_property.py  test_storage_backend.py  test_storage_sqlite.py  test_succession_phase.py  test_swarm.py  test_sync_compat.py
